fixed performance issues: removed duplicate ipcs listeners, improved timing-based rendering, added shift+hover for frq display

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    webkit-app-region: drag;
     border-radius: 5px;
 }
 
@@ -51,7 +50,8 @@ body {
     width: 100%;
     height: 100%;
     display: block;
-    pointer-events: none;
+    pointer-events: auto;
+    -webkit-app-region: drag;
     border-radius: 5px;
 }
 
